--- a/lib/layout/css/bootstrap.css
+++ b/lib/layout/css/bootstrap.css
@@ -3988,3 +3988,14 @@ a.thumbnail:hover {
 .invisible {
   visibility: hidden;
 }
+.progressbar {
+  background-color: gray;
+  width: 300px;
+  margin-left: auto ;
+  margin-right: auto ;
+}
+.progressbar div {
+  background-color: #049cdb;
+  width: 0%; 
+  height: 4px;
+}	
